--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,7 +6,8 @@ on:
   pull_request:
     branches: [ "Casino_Main" ]
 
-jobs:  - name: Setup .NET Core SDK
+jobs:  
+- name: Setup .NET Core SDK
   uses: actions/setup-dotnet@v4.0.0
   with:
     # Optional SDK version(s) to use. If not provided, will install global.json version when available. Examples: 2.2.104, 3.1, 3.1.x, 3.x, 6.0.2xx
